--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,9 +1,15 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url(docs\assets\images\banner_Celestials.webp);
+    background-image: url('../assets/images/banner_Celestials.webp');
     /* Replace with your actual path */
     background-size: cover;
+    /* Make the image cover the entire viewport */
+    background-repeat: no-repeat;
+    /* Prevent the image from repeating */
+    background-attachment: fixed;
+    /* Keeps the background fixed when scrolling */
     background-position: center;
+    /* Centers the image */
 }
 
 #container {
